--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,6 +36,7 @@
                 <input class="login-form-input" type="password" placeholder="Password" name="password">
                 <button class="login-btn" type="submit" id="login-button">Login</button>
             </form>
+            <a class="signup" href="/user/signup">Signup</a>
         
         <!-- <ul class="bg-bubbles">
             <li></li>
