--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,7 +2,11 @@
     <h1 class="main-header">Wacker</h1>
     <div class="nav-left">
         <ul>
-            <li id="home"><a href="/home">Home</a></li>
+            <div>
+            <li id="home">
+                <a href="/home">Home</a>
+            </li>
+            </div>
             <li id="workouts"><a href="/workouts">Workouts</a></li>
         </ul>
     </div>
