--- a/views/user.ejs
+++ b/views/user.ejs
@@ -11,13 +11,17 @@
     <%- include ('navbar.ejs') -%>
 
     <div class='main-div'>
-        <h1>Welcome</h1>
+        <h2>Welcome</h2>
         
-        <p> Create an account or log in to an existing account </p>
+        <div class="container">
+            <h1> Create an account or log in to an existing account </h1>
+
+            <form class="login-form" action="/user/login" method="GET">
+                <button class="login-btn" type="submit" id="goToLogin">Login</button>
+            </form>
     
-        <a href="/user/signup">Sign Up</a>
-        <a href="/user/login">Login</a>
-        
+            <a class="signup" href="/user/signup">Signup</a>
+        </div>
     </div>
 
     <script>
