--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -15,8 +15,8 @@
             <h2>Past Workouts</h2>
 
             <% for(var i = workouts.length - 1; i > -1; i--) {%> 
+                <% w = workouts[i]; %>
                     <button class="collapsible">
-                        <% w = workouts[i]; %>
                         <%= w.name%> -
                         <%= w.date%>, 
                         <%= w.duration%>s,
@@ -41,6 +41,16 @@
 
         <div id="exercises" class="exercises">
             <h2>Exercises</h2>
+
+            <div id=prs>
+                <div id="chest">
+                    <% for(var i = 0; i < exercises.length; i++) {%>
+                            <p><%= exercises[i].name%></p>
+                    <%}%> 
+
+                </div>
+            </div>
+
             <button class="exercise-btn">Chest</button>
             <button class="exercise-btn">Triceps</button>
             <button class="exercise-btn">Back</button>
@@ -58,21 +68,25 @@
         document.getElementById("workouts").style.backgroundColor = "#D3D3D3";
 
         var coll = document.getElementsByClassName("collapsible");
-var i;
+        var i;
 
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.maxHeight){
-      content.style.maxHeight = null;
-    } else {
-      content.style.maxHeight = content.scrollHeight + "px";
-    } 
-  });
-}
+        for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.maxHeight){
+            content.style.maxHeight = null;
+            } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+            } 
+        });
+        }
 
-//                        , workouts[i].date, workouts[1].duration, workouts[1].weightLifted 
+        var exBtns = document.getElementsByClassName("exercise-btn");
+
+        function renderExercises(exercise) {
+
+        }
     </script>
 </body>
 </html>
