--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
 
                     <label class="modal-label">Workout Name:</label>
                     <input type="text" name="workoutName">
-                    <div id="stopwatch" class="stopwatch"></div>
+                    <div id="stopwatch" class="stopwatch">Time: </div>
                     <input type="text" id="duration" class="hiddenInput" name="duration">
 
                     <div id="exercises">
