--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,9 +35,7 @@
                 <input class="login-form-input" type="text" placeholder="Username" name="username">
                 <input class="login-form-input" type="password" placeholder="Password" name="password">
                 <button class="login-btn" type="submit" id="login-button">Login</button>
-            </form>
-            <a class="signup" href="/user/signup">Signup</a>
-        
+            </form>        
         <!-- <ul class="bg-bubbles">
             <li></li>
             <li></li>
@@ -50,7 +48,7 @@
             <li></li>
             <li></li>
         </ul> -->
-            <p >Need an account? <a href="/user/signup">Signup</a></p>
+            <p >Need an account? <a class="signup" href="/user/signup">Signup</a></p>
         </div>
     </div>
 
