--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -13,7 +13,7 @@
     <div class='main-div'>
         <h2>Goodbye!</h2>    
         <form class="logout-form" action="/user/logout" method="GET">
-            <button class="styledBtn" type="submit" id="login-button">Logout</button>
+            <button class="login-btn" type="submit" id="login-button">Logout</button>
         </form>
             
     </div>
