--- a/views/user.ejs
+++ b/views/user.ejs
@@ -20,7 +20,9 @@
                 <button class="login-btn" type="submit" id="goToLogin">Login</button>
             </form>
     
-            <a class="signup" href="/user/signup">Signup</a>
+            <form class="login-form" action="/user/signup" method="GET">
+                <button class="login-btn" type="submit" id="goToSignup">Signup</button>
+            </form>
         </div>
     </div>
 
