--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -31,7 +31,7 @@
                 <input class="login-form-input" type="text" placeholder="Email" name="email">
                 <button class="login-btn" type="submit">Sign Up</button>
             </form>
-            <p >Have An Account? <a href="/user/login">Login</a></p>
+            <p >Have An Account? <a class="signup" href="/user/login">Login</a></p>
         </div>
     </div>
 
