--- a/views/user.ejs
+++ b/views/user.ejs
@@ -19,8 +19,10 @@
             <form class="login-form" action="/user/login" method="GET">
                 <button class="login-btn" type="submit" id="goToLogin">Login</button>
             </form>
-    
-            <a class="signup" href="/user/signup">Signup</a>
+
+            <form class="login-form" action="/user/signup" method="GET">
+                <button class="login-btn" type="submit" id="goToLogin">Sign Up</button>
+            </form>
         </div>
     </div>
 
