--- a/views/analytics.ejs
+++ b/views/analytics.ejs
@@ -33,6 +33,8 @@
             <% }; %>
         </div>
 
+        <div style = "margin-top: 50px;"></div>
+
         <div id="progress-liftgoals">
             <h3 class="goal-progress">Lift Goals Progress:</h3>
             <% for (const [goal, progress] of liftGoalMap) { %>
