--- a/views/analytics.ejs
+++ b/views/analytics.ejs
@@ -13,7 +13,7 @@
     <div class="main-div">
         More data coming soon!
 
-        <h2> Current Goals </h2>
+        <h2 style="text-align: left;"> Current Goals </h2>
 
         <div id="progress-gengoals">
             <h3 class="goal-progress">General Goals Progress:</h3>
