--- a/views/workouts.ejs
+++ b/views/workouts.ejs
@@ -76,8 +76,13 @@
                 var content = this.nextElementSibling;
                 if (content.style.maxHeight){
                     content.style.maxHeight = null;
+                    // content.style.padding = "0";
+                    // this.style.borderRadius = "30px";
+                    
                 } else {
                     content.style.maxHeight = content.scrollHeight + "px";
+                    // content.style.padding = "10px";
+                    // this.style.borderRadius = "0";
                 } 
             });
         }
