--- a/public/styles.css
+++ b/public/styles.css
@@ -231,6 +231,7 @@ nav a {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+    /* transition: border-radius 0.2s ease-out; */
     background-color: #f1f1f1;
     text-align: left;
     width: 100%;
@@ -248,6 +249,7 @@ nav a {
 }
 
 .action-btn {
+    justify-content: center;
     /* font-size: 13px;
     /* margin: 0 auto;
     padding: 13px 35px; */
@@ -278,6 +280,80 @@ nav a {
 }
 
 .action-btn:hover {
+    background-color: black;
+    color: white;
+}
+
+.deleteEx-btn {
+    justify-content: center;
+    /* font-size: 13px;
+    /* margin: 0 auto;
+    padding: 13px 35px; */
+    border-radius: 6px;
+    letter-spacing: 2px;
+    text-align: center;
+    /*
+    text-decoration: none;
+    text-transform: uppercase;
+    line-height: 21px; */
+    background-color: white;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid black;
+    color: black;
+    -webkit-transition: .4s ease-in-out;
+    -o-transition: .4s ease-in-out;
+    transition: .4s ease-in-out;
+    /* position: relative;
+    top: 20%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    cursor: pointer;
+    margin: 2px;
+    padding: 4px;
+    text-decoration: none;
+}
+
+.deleteEx-btn:hover {
+    background-color: black;
+    color: white;
+}
+
+.deleteGoal-btn {
+    justify-content: center;
+    /* font-size: 13px;
+    /* margin: 0 auto;
+    padding: 13px 35px; */
+    border-radius: 6px;
+    letter-spacing: 2px;
+    text-align: center;
+    /*
+    text-decoration: none;
+    text-transform: uppercase;
+    line-height: 21px; */
+    background-color: white;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px solid black;
+    color: black;
+    -webkit-transition: .4s ease-in-out;
+    -o-transition: .4s ease-in-out;
+    transition: .4s ease-in-out;
+    /* position: relative;
+    top: 20%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    cursor: pointer;
+    margin: 2px;
+    padding: 4px;
+    text-decoration: none;
+    margin-left: auto; 
+    margin-right: 0;
+}
+
+.deleteGoal-btn:hover {
     background-color: black;
     color: white;
 }
@@ -658,7 +734,6 @@ nav a {
     width: 70%;
   }
 
-
   .progress-collapsible {
     background-color: transparent;
     color: white;
@@ -726,10 +801,11 @@ nav a {
 }
 
 .timer {
+    display: inline;
+    box-sizing: initial;
     width: 80px;
-    position: absolute;
-    outline: 1px solid black;
-    margin: 0;
+    /* outline: 1px solid black; */
+    margin: 2px;
     padding: 4px;
     /* top: -2px; */
 }
@@ -769,6 +845,18 @@ nav a {
 .timer-btn:hover {
     background-color: black;
     color: white;
+}
+
+.timer-div {
+    left: 200px;
+    display: inline;
+    position: absolute;
+    /* position: relative; */
+}
+
+.exercise-div {
+    left: 200px;
+    display: inline;
 }
 
 /* GOAL STYLES  */
@@ -827,7 +915,6 @@ nav a {
   }
 
   .progress-collapsiblecontent {
-
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
@@ -846,3 +933,7 @@ nav a {
       background-color:red;
       height: 20px;
   }
+
+.goal-div {
+    text-decoration: none;
+}
