--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,6 +45,7 @@
 
                     <button id="finish" type="submit" class="action-btn">FINISH</button>
                     <button id="clearWorkout" type="button" class="action-btn">CLEAR</button>
+                    <p id="warning" class="warning"></p>
                 </form>
             </div>
         </div>
