--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
     <div class="main-div">
 
-        <h4>Welcome to Wacker: A Workout Tracker application</h4>
+        <h4>Welcome to Gainstop: A Workout Tracker application</h4>
         <div style="margin-top: 50px;"></div>
         <p>Here, you can keep a record of your workouts and exercises along with your goals to get in shape.</p>
         <p>Create an account or log in to utilize the resources!</p>
