--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="nav-menu">
-    <h1 class="main-header">Gainstop</h1>
+    <h1 class="main-header">GAINSTOP</h1>
     <div class="nav-left">
         <ul>
             <div>
